--- a/views/clasifica.xml
+++ b/views/clasifica.xml
@@ -46,5 +46,15 @@
                     </field>
                 </record>
 
+    <record id="view_nocliente_form_inherit" model="ir.ui.view">
+        <field name="name">Numero de Cliente</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="base.view_partner_form"/>
+        <field name="arch" type="xml">
+            <field name="vat" position="after">
+                <field name="ncliente" placeholder="Numero de Cliente"/>
+            </field>
+        </field>
+    </record>
 
 </odoo>
