--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -36,4 +36,29 @@
         </field>
     </record>
 
+    <record model="ir.ui.view" id="marvel_product_template_form_view_inherit">
+        <field name="name">marvel.product_template_form_view_inherit</field>
+        <field name="inherit_id" ref="product.product_template_form_view"/>
+        <field name="model">product.template</field>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@name='volume']" position="after">
+                <label for="length"/>
+                <div class="o_row">
+                    <field name="length" string="Length"/>
+                    <span>m</span>
+                </div>
+                <label for="whidth"/>
+                <div class="o_row">
+                    <field name="whidth" string="Whidth"/>
+                    <span>m</span>
+                </div>
+                <label for="high"/>
+                <div class="o_row">
+                    <field name="high" string="High"/>
+                    <span>m</span>
+                </div>
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
