--- a/views/sugerido.xml
+++ b/views/sugerido.xml
@@ -18,7 +18,8 @@
                <field name="inherit_id" ref="sale.view_order_form"/>
                <field name="arch" type="xml">
                    <field name="qou_subclase" position="after">
-                       <field name="qou_sugerido"/>
+                       <field name="qou_sugerido" invisible="1"/>
+                       <field name="warehouse_sugerido_id" options="{'no_create': True, 'no_open': True}" domain="[('id','=',warehouse_id)]" required="1"/>
                    </field>
                </field>
            </record>
