--- a/views/sugerido.xml
+++ b/views/sugerido.xml
@@ -19,10 +19,22 @@
                <field name="arch" type="xml">
                    <field name="qou_subclase" position="after">
                        <field name="qou_sugerido" invisible="1"/>
-                       <field name="warehouse_sugerido_id" options="{'no_create': True, 'no_open': True}" domain="[('id','=',warehouse_id)]"/>
+                       <field name="warehouse_sugerido_id"/>
                    </field>
                </field>
-           </record>
+      </record>
+
+      <record id="view_sale_stock_sugerido_inherit" model="ir.ui.view">
+           <field name="name">Warehouse Readonly</field>
+           <field name="model">sale.order</field>
+           <field name="inherit_id" ref="sale_stock.view_order_form_inherit_sale_stock"/>
+           <field name="arch" type="xml">
+              <xpath expr="//field[@name='warehouse_id']" position="attributes">
+                    <attribute name="readonly">False</attribute>
+                    <attribute name="domain">[('id','=',warehouse_sugerido_id)]</attribute>
+              </xpath>
+           </field>
+      </record>
 
 <record id="view_portal_inherit" model="ir.ui.view">
     <field name="name">Pedido Portal</field>
