Fix additional field temporary

--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -12,11 +12,13 @@
                 <field name="marca_ids" widget="many2many_tags"/>
                 <field name="refaoriginal_ids" widget="many2many_tags"/>
                 <field name="temporary_id" options="{'no_create': True, 'no_open': True}" />
-                
+                <field name="x_studio_clasificacin" />
                 <field name="x_studio_tipo" />
-                
+                <field name="x_can_be_sold_from_vsa" />
             </xpath>
-            
+            <xpath expr="//field[@name='lst_price']" position="after">
+                <field name="x_precio_dia" />
+            </xpath>
         </field>
     </record>
 
