--- a/views/sugerido.xml
+++ b/views/sugerido.xml
@@ -64,7 +64,7 @@
     <field name="inherit_id" ref="sale.view_order_form"/>
     <field name="arch" type="xml">
         <field name="mostrador" position="after">
-            <field name="dfactura"/>
+            <field name="dfactura" string="Detener envio"/>
         </field>
     </field>
 </record>
